set(Boost_USE_STATIC_LIBS OFF)
set(Boost_USE_MULTITHREADED ON)
set(Boost_USE_STATIC_RUNTIME OFF)
set(Boost_INCLUDE_DIR ../../Vendor/boost_1_80_0/)
find_package(Boost REQUIRED)
include_directories(../../Vendor/boost_1_80_0/)
if (Boost_FOUND)
    message("Find boost")
else()
    message("Boost not found")
endif()

add_library(Network Network.cpp)
target_link_libraries(Network ${Boost_LIBRARIES})