set(CMAKE_CXX_FLAGS /EHsc)
set(Boost_USE_STATIC_LIBS ON)
#set(Boost_USE_MULTITHREADED ON)
#set(Boost_USE_STATIC_RUNTIME OFF)
add_definitions(${Boost_LIB_DIAGNOSTIC_DEFINITIONS})
set(BOOST_ROOT ../../Vendor/boost_1_80_0/)
set(Boost_INCLUDE_DIR ../../Vendor/boost_1_80_0/)
#set(Boost_LIBRARY_DIRS ../../Vendor/boost_1_80_0/stage)
find_package(Boost 1.80.0 REQUIRED COMPONENTS system)
include_directories(Network ${Boost_INCLUDE_DIRS})

if (Boost_FOUND)
    message("Find boost")
else()
    message("Boost not found")
endif()

add_executable(Network main.cpp Network.cpp)

target_link_libraries(Network ${Boost_LIBRARIES})
message("d" ${Boost_LIBRARIES} )